# $Id$

Griffith ChangeLog
------------------
(c) 2005-2006 Vasco Nunes

2006-07-30 Piotr Ozarowski <ozarow@gmail.com>
	* Selecting next/previous movie is now possible (new toolbar buttons)

2006-07-29 Piotr Ozarowski <ozarow@gmail.com>
	* IMDb movie plugin adds new lines in "with" field again
	* Draggable toolbar
	* Update button moved to toolbar

2006-07-27 Piotr Ozarowski <ozarow@gmail.com>
	* Makefile for po files updated
	  - use `cd po && make XX.po` to create new translation

2006-07-21 Piotr Ozarowski <ozarow@gmail.com>
	* Updated Free Software Foundation address.
	* FDb movie plugin updated.
	* Filmweb movie plugin updated.

2006-07-20 Piotr Ozarowski <ozarow@gmail.com>
	* Fixed media handling while exporting to HTML.

2006-06-29 Piotr Ozarowski <ozarow@gmail.com>
	* German translation updated (thanks to Malte Wiemann)

2006-05-27 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Italian translation updated.

2006-05-19 Piotr Ozarowski <ozarow@gmail.com>
	* Added FDb movie plugin

2006-05-18 Piotr Ozarowski <ozarow@gmail.com>
	* Movie plugins code cleanups
	* Added FilmeVonAZ movie plugin (thanks to Michael Jahn)

2006-05-17 Piotr Ozarowski <ozarow@gmail.com>
	* Added Kino.de movie plugin (thanks to Michael Jahn)

2006-05-08 Piotr Ozarowski <ozarow@gmail.com>
	* Cinematografo movie plugin updated.

2006-05-02 Piotr Ozarowski <ozarow@gmail.com>
	* Added MySQL support
	* Server can be changed on the fly (see database tab in preferences)
	* Some GtkComboBoxEntry widgets changed to GtkComboBox

2006-04-28 Piotr Ozarowski <ozarow@gmail.com>
	* SQLAlchemy transition started

2006-04-26 Piotr Ozarowski <ozarow@gmail.com>
	* Added database settings to preferences window

2006-04-25 Piotr Ozarowski <ozarow@gmail.com>
	* Added PostgreSQL support!
	* Added merging data from .gri and .db files (still needs work)
	* Fixed some minor bugs

2006-04-25 Vasco Nunes <vasco.m.nunes@gmail.com>
	* Added italian translation (thanks to Diego Porcelli)
